--- a/force-app/main/default/lwc/footerComponent/footerComponent.html
+++ b/force-app/main/default/lwc/footerComponent/footerComponent.html
@@ -1,7 +1,6 @@
 <template>
-    <div class="c-container">
         <lightning-layout>
-            <lightning-layout-item padding="around-small">
+            <lightning-layout-item padding="around_xxx-small">
                 <template if:true={_isVisible}>
                     <lightning-card>
                         <h3 slot="title">
@@ -21,5 +20,4 @@
             </lightning-layout-item>
         </lightning-layout>
 
-    </div>
 </template>
